# dashboard/src/api/index.ts
@@ -12,6 +12,8 @@ export type TraceCostView = components['schemas']['TraceCostView']
 export type ScriptView = components['schemas']['ScriptView']
 export type ApiKeyView = components['schemas']['ApiKeyView']
 export type ApiKeyMutateBody = components['schemas']['ApiKeyMutateBody']
+export type ProjectView = components['schemas']['ProjectView']
+export type UpsertProjectRequestBody = components['schemas']['UpsertProjectRequestBody']
 export type FetchModelsRequestBody = components['schemas']['FetchModelsRequestBody']
 export type FetchModelsResponseBody = components['schemas']['FetchModelsResponseBody']
 export type ExchangeRateView = components['schemas']['ExchangeRateView']
